// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/collapsible/Collapsible should apply buttonProps correctly 1`] = `
<div
  className="collapsible-card is-open"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      a={1}
      b={2}
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span>
        foobar
      </span>
    </div>
  </div>
</div>
`;

exports[`components/collapsible/Collapsible should apply correct border class 1`] = `
<div
  className="collapsible-card is-open is-bordered"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span>
        foobar
      </span>
    </div>
  </div>
</div>
`;

exports[`components/collapsible/Collapsible should apply correct isOpen state 1`] = `
<div
  className="collapsible-card"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span>
        foobar
      </span>
    </div>
  </div>
</div>
`;

exports[`components/collapsible/Collapsible should not render a PlainButton if a button is not passed in 1`] = `
<div
  className="collapsible-card is-open"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span>
        foobar
      </span>
    </div>
  </div>
</div>
`;

exports[`components/collapsible/Collapsible should render a PlainButton if a button is passed in 1`] = `
<div
  className="collapsible-card is-open"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span>
        foobar
      </span>
    </div>
  </div>
</div>
`;

exports[`components/collapsible/Collapsible should render component correctly 1`] = `
<div
  className="collapsible-card is-open"
>
  <div
    className="collapsible-card-header"
  >
    <PlainButton
      className="collapsible-card-title"
      onClick={[Function]}
      type="button"
    >
      foo
      <IconCaretDown
        className="collapsible-card-header-caret"
        color="#999"
        width={8}
      />
    </PlainButton>
  </div>
  <div
    className="collapsible-card-transition"
    style={
      Object {
        "height": "auto",
        "transitionDuration": "100ms",
      }
    }
  >
    <div
      className="collapsible-card-content"
    >
      <span
        className="test-content"
      >
        foobar
      </span>
    </div>
  </div>
</div>
`;
